Añadido el ejercicio 18 del funcionamiento basico con un conector a base de datos de mysql y el ejercicio 19 de interconexion de base de datos mysql y los ejs

--- a/17_dependencias/package.json
+++ b/17_dependencias/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www", // Aqui deberiamos poner el arranque en normal
     "dev" : "DEBUG=17_dependencies:* PORT=3000 nodemon ./bin/www"
     // Cuando pongamos 'npm run dev' ejecutará este comando, que cargará de forma correcta
+    // mediante el comando '|' podemos encadenar comandos
   },
   "dependencies": {
     "body-parser": "~1.13.2",
